- improved first log entry for quest "Sword of Innos" to make it clearer what to do next
- player now can heat either one raw steel or all at once
- fixed wrong subtitles when search for a Schagby player
- camera at Sly's arena fight should be stopped now with a higher chance
- Guards now leave the gate during "Escape aid"



1.0.3

Enhancements:

- Added takes for: Bengar, Mine Guard (King's Guard), Court Bouncer, Garvell, Borka, Rudolf, Akil, Baltram, Red Riding Hood

General Fixes:

- not all weapons that should be sellable at Harad can be sold at Harad
- Added some log entries for quest "Key to Luck"
- Weakened goats a little more
- fixed ambient dialogs for nameless NPCs that aren't synchronized yet
- added missing log entry at Hyglas in ice cave
- Constantino now expects just two of each potion for his first quest when being is apprentice
- Attitude bonus now isn't changed while player is transformed
- weakened some monsters in Relendel and gave them a higher level
- fixed wrong quest flow when using Dragomir or Lobart way to get Troll poop
- Axe of Doom shouldn't duplicate itself anymore
- Axe of Doom is weaker now (+2 damage per kill => +0.5 damage per kill)
- Endres quest now fails when judge is killed during Ulrich's quest
- Updated GFA to 1.0.1 for better hitchances
- Fixed wrong naming of Hanna's dubbing (German dubbing)
- Added SVM subtitles and TTS dubbing (German dubbing) for missing voices
- Fixed missing take of Garond (German dubbing)
- Switched SVM and take for picklock failure and broken picklock
- reduced loudness of Smalltalks for TTS



1.0.2

Enhancements:

- some traders now have also poisons and healing buds to make some quests easier

General Fixes:

- Switched SVM and take for picklock failure and broken picklock
- Bartok now gives the hero gold for his swamp herb instead of vice versa
- HP regeneration really works now as expected
- Fixed lost effects at map origin